--- a/index.html
+++ b/index.html
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio - Aula web I</title>
+    <title>Meu Portfólio - Daniel Siqueira Jackowski</title>
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    div qual q
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Daniel Siqueira Jackowski</h1>
+            <h3>Eu sou um Programador</h3>
+
+            
+            <div class="social-media">
+                <a href="https://github.com/Mauboru" target="_blank">
+                    <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://github.com/Mauboru" target="_blank">
+                    <i class="bx bxl-facebook-circle"></i>
+                </a>
+                <a href="https://github.com/Mauboru" target="_blank">
+                    <i class="bx bxl-linkedin-square"></i>
+                </a>
+                <a href="https://github.com/Mauboru" target="_blank">
+                    <i class="bx bxl-instagram-alt"></i>
+                </a>
+            </div>
+
+        </div>
+
+        <a href="121212.jpg" class="btn" download="121212.jpg">Download CV</a>
+    </section>
+
+    <section class="habilidades-section">
+        <header class="habilidades-header">
+            <h1>Minhas Habilidades e Layout</h1>
+            <p>Competências em áreas técnicas, demonstradas com a estrutura de Flexbox, Grid e Responsividade.</p>
+        </header>
+
+        <main class="habilidades-container">
+
+            <div class="card">
+                <h3>Java & Programação Orientada a Objetos (POO)</h3>
+                <p>Domínio em POO, princípios de Java e desenvolvimento de códigos básicos para soluções lógicas.</p>
+                <ul>
+                    <li><code>Classes & Objetos</code></li>
+                    <li><code>Herança</code></li>
+                    <li><code>Polimorfismo</code></li>
+                    <li><code>Estruturas de Controle</code></li>
+                </ul>
+            </div>
+
+            <div class="card flex-item-demo"> 
+                <h3>Engenharia Mecânica Automotiva</h3>
+                <p>Habilidade na criação de projetos automotivos, desenvolvimento de ideias e modelos esportivos.</p>
+                <ul>
+                    <li>Criação de Modelos Esportivos</li>
+                    <li>Análise de Desempenho</li>
+                    <li>Desenho Técnico Automotivo</li>
+                    <li>Estruturas de Veículos</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>Hardware de Computadores e Montagem</h3>
+                <p>Conhecimento na montagem de computadores e criação de *setups* otimizados para todos os níveis de usuário.</p>
+                <ul>
+                    <li>Seleção de Componentes (CPU, GPU, RAM)</li>
+                    <li>Otimização Térmica</li>
+                    <li>Montagem e Cabeamento</li>
+                    <li>Solução de Problemas de Hardware</li>
+                </ul>
+            </div>
+
+            <div class="card grid-item-demo">
+                <h3>Habilidade Extra: Posicionamento (Grid Item)</h3>
+                <p>Sei posicionar itens em qualquer célula, definindo o início e fim nas linhas e colunas (Demonstração de Grid Item).</p>
+                <ul>
+                    <li><code>grid-column</code></li>
+                    <li><code>grid-row</code></li>
+                    <li><code>justify-self</code></li>
+                    <li><code>align-self</code></li>
+                </ul>
+            </div>
+
+            <div class="card responsive-demo">
+                <h3>Habilidade Extra: Responsividade (Media Queries)</h3>
+                <p>Sei adaptar layouts para diferentes tamanhos de tela (desktop, tablet, mobile) usando breakpoints (Demonstração de Responsividade).</p>
+                <ul>
+                    <li><code>@media</code></li>
+                    <li><code>max-width</code></li>
+                    <li><code>min-width</code></li>
+                </ul>
+            </div>
+
+        </main>
+    </section>
 </body>
 </html>
