--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h1>Daniel Siqueira Jackowski</h1>
-            <h3>Eu sou um Programador</h3>
+            <h3>Eu sou um Programador.</h3>
 
             
             <div class="social-media">
@@ -72,6 +72,10 @@
             <div class="mt-4">
                 <a href="121212.jpg" class="btn" download="121212.jpg">Download CV</a>
             </div>
+        </div>
+
+        <div class="home-img">
+            <img src="catcat.jpg" alt="Daniel Siqueira Jackowski" class="shadow-lg">
         </div>
 
     </section>
