--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
     <section class="home" id="home">
         <div class="home-content">
             <h1>Daniel Siqueira Jackowski</h1>
-            <h3>Eu sou um Programador.</h3>
+            <h3>Eu sou um Programador</h3>
 
             
             <div class="social-media">
-                <a href="https://github.com/Mauboru" target="_blank">
+                <a href="https://github.com/DanielSiqueiraJackowski" target="_blank">
                     <i class="bx bxl-github"></i>
                 </a>
-                <a href="https://github.com/Mauboru" target="_blank">
+                <a href="https://github.com/DanielSiqueiraJackowski" target="_blank">
                     <i class="bx bxl-facebook-circle"></i>
                 </a>
-                <a href="https://github.com/Mauboru" target="_blank">
+                <a href="https://github.com/DanielSiqueiraJackowski" target="_blank">
                     <i class="bx bxl-linkedin-square"></i>
                 </a>
-                <a href="https://github.com/Mauboru" target="_blank">
+                <a href="https://github.com/DanielSiqueiraJackowski" target="_blank">
                     <i class="bx bxl-instagram-alt"></i>
                 </a>
             </div>
