--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contato</a>
                 </li>
+                <li class="nav-item ms-3">
+                    <button id="themeToggle" class="btn btn-outline-light theme-toggle" type="button" title="Alternar Tema">
+                        <i class="bx bx-sun theme-icon"></i>
+                    </button>
+                </li>
             </ul>
         </div>
         </div>
@@ -170,7 +175,7 @@
                     <div class="carousel-item active">
                         <div class="d-block w-100 text-center">
                             <img src="https://placehold.co/800x450/4a90e2/ffffff?text=Certificado+Java+POO" 
-                                 class="img-fluid certificacao-img shadow-lg rounded" alt="Certificado Java POO">
+                                     class="img-fluid certificacao-img shadow-lg rounded" alt="Certificado Java POO">
                             <div class="carousel-caption d-none d-md-block bg-white bg-opacity-75 rounded-top-lg">
                                 <h5 class="text-dark">Programação Orientada a Objetos (POO)</h5>
                                 <p class="text-muted">Foco em Herança, Encapsulamento e Polimorfismo. (2024)</p>
@@ -181,7 +186,7 @@
                     <div class="carousel-item">
                         <div class="d-block w-100 text-center">
                             <img src="https://placehold.co/800x450/6cbe45/ffffff?text=Certificado+Bootstrap+Responsivo" 
-                                 class="img-fluid certificacao-img shadow-lg rounded" alt="Certificado Bootstrap">
+                                     class="img-fluid certificacao-img shadow-lg rounded" alt="Certificado Bootstrap">
                             <div class="carousel-caption d-none d-md-block bg-white bg-opacity-75 rounded-top-lg">
                                 <h5 class="text-dark">Desenvolvimento Web Responsivo com Bootstrap</h5>
                                 <p class="text-muted">Uso da grade e componentes para mobile-first. (2024)</p>
@@ -192,7 +197,7 @@
                     <div class="carousel-item">
                         <div class="d-block w-100 text-center">
                             <img src="https://placehold.co/800x450/e24a4a/ffffff?text=Certificado+SQL+Modelagem" 
-                                 class="img-fluid certificacao-img shadow-lg rounded" alt="Certificado SQL">
+                                     class="img-fluid certificacao-img shadow-lg rounded" alt="Certificado SQL">
                             <div class="carousel-caption d-none d-md-block bg-white bg-opacity-75 rounded-top-lg">
                                 <h5 class="text-dark">Modelagem de Banco de Dados e SQL</h5>
                                 <p class="text-muted">Foco em joins, integridade referencial e normalização. (2023)</p>
